
syntax = "proto3";

package grpc.health.v1;

option java_package = "io.grpc.health.v1";
option java_multiple_files = true;
option java_outer_classname = "HealthProto";

// Standard gRPC Health Checking Protocol
// https://github.com/grpc/grpc/blob/master/doc/health-checking.md
service Health {
  // Check returns the serving status of the server or a specific service.
  // If the service name is empty, the overall server health is returned.
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);

  // Watch is a server-side streaming RPC that returns the serving status
  // whenever it changes.
  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}

message HealthCheckRequest {
  // Service name to check. Empty string checks overall server health.
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3; // Used only by Watch
  }
  ServingStatus status = 1;
}